--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -3,17 +3,21 @@
     padding:0;
 }
 
-body {
-    padding-top: 60px;
+.container {
+    width: auto;
+  max-width: 680px;
+  /* padding: 0 15px; */
 }
 
 #name {
-    font-size: 80px;
-    margin-top: 10%;
+    font-size: 60px;
+    margin-top: 1%;
     color:rgb(109, 128, 0);
+    float:left;
 }
 #position_title {
-    margin-top: 3%;
+    float:left;
+    margin-top: 4%;
 }
 
 #position_title {
@@ -21,14 +25,27 @@ body {
 }
 
 #bio_box {
+    margin-left: 25%;
     border: 4px solid rgb(231, 114, 35);
-    height: 500px;
-    width: 500px;
-    background-color: rgb(245, 241, 241);
+    height:700px;
+    width: 900px;
+    background-color: white;
     border-radius: 50%;
-    padding-right: 10%;
+    
   
 }
 #gooey_footer {
-   height:200px;
+
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        height: 200px; /* Set the fixed height of the footer here */
+        line-height: 60px; /* Vertically center the text there */
+        background-color: rgb(20, 22, 5);
+      
+}
+
+ #top_line {
+    height: .1%;
+    color:red;
 }
