--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -2,7 +2,11 @@
     margin:0;
     padding:0;
 }
-
+body {
+    background-color: rgb(73, 139, 163); 
+    background-repeat: repeat;
+    /* url("") */
+}
 .container {
     width: auto;
   max-width: 680px;
@@ -12,7 +16,7 @@
 #name {
     font-size: 60px;
     margin-top: 1%;
-    color:rgb(109, 128, 0);
+    color:rgb(234, 248, 155);
     float:left;
 }
 #position_title {
@@ -21,15 +25,16 @@
 }
 
 #position_title {
-    color:rgb(11, 192, 247);
+    color:rgb(108, 212, 243);
 }
 
 #bio_box {
+    /* background-image:url("assets/images/crumpled_paper.png");  */
     margin-left: 25%;
     border: 4px solid rgb(231, 114, 35);
-    height:700px;
-    width: 900px;
-    background-color: white;
+    height:630px;
+    width: 540px;
+    background-color: rgb(216, 242, 250);
     border-radius: 50%;
     
   
@@ -39,13 +44,38 @@
         position: absolute;
         bottom: 0;
         width: 100%;
-        height: 200px; /* Set the fixed height of the footer here */
+        height: 250px; /* Set the fixed height of the footer here */
         line-height: 60px; /* Vertically center the text there */
-        background-color: rgb(20, 22, 5);
-      
+        
+        
 }
 
  #top_line {
     height: .1%;
-    color:red;
+   
+}
+#footer_font {
+ 
+   padding-bottom:10%;   
+}
+.text_modif{
+    color: rgb(248, 245, 245);
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0; 
+}
+#photo {
+    width: 19%;
+    height: 19%;
+   /* margin-bottom:15%; */
+   padding-bottom:15%;
+   margin-left:5%;
+    border: 2px solid white;
+    
 }
