--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -3,7 +3,7 @@
     padding:0;
 }
 body {
-    background-color: rgb(73, 139, 163); 
+    background-color: rgb(107, 169, 192); 
     background-repeat: repeat;
     /* url("") */
 }
@@ -16,8 +16,9 @@ body {
 #name {
     font-size: 60px;
     margin-top: 1%;
-    color:rgb(234, 248, 155);
+    color:rgb(243, 208, 52);
     float:left;
+    
 }
 #position_title {
     float:left;
@@ -25,17 +26,20 @@ body {
 }
 
 #position_title {
-    color:rgb(108, 212, 243);
+    color:rgb(220, 244, 252);
 }
 
 #bio_box {
     /* background-image:url("assets/images/crumpled_paper.png");  */
     margin-left: 25%;
-    border: 4px solid rgb(231, 114, 35);
+    border: 1px solid;
+    padding: 10px;
+    box-shadow: 5px 10px 28px rgb(33, 63, 73);
     height:630px;
     width: 540px;
     background-color: rgb(216, 242, 250);
     border-radius: 50%;
+
     
   
 }
@@ -71,11 +75,11 @@ hr {
     padding: 0; 
 }
 #photo {
-    width: 15%;
-    height: 15%;
+    width: 16%;
+    height: 16%;
 
-   margin-left:5%;
-    border: 5px solid rgb(73, 139, 163);
+   margin-left:3%;
+    border: 5px solid white;
     
 }
 
