--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -32,9 +32,9 @@ body {
 #bio_box {
     /* background-image:url("assets/images/crumpled_paper.png");  */
     margin-left: 25%;
-    border: 1px solid;
+    border: 1px solid rgb(107, 169, 192);
     padding: 10px;
-    box-shadow: 5px 10px 28px rgb(33, 63, 73);
+    box-shadow: 5px 10px 28px rgb(35, 90, 109);
     height:630px;
     width: 540px;
     background-color: rgb(216, 242, 250);
@@ -50,6 +50,7 @@ body {
         width: 100%;
         height: 250px; /* Set the fixed height of the footer here */
         line-height: 60px; /* Vertically center the text there */
+
         
         
 }
@@ -75,12 +76,17 @@ hr {
     padding: 0; 
 }
 #photo {
+    width: 16%; /* this scales the image down */
+    margin-bottom:7%; /* this makes it go above */
+   margin-left:3%; /* this is easy */
+     border: 5px solid white; adds white
+    /*
     width: 16%;
     height: 16%;
-
+margin-bottom:5%;
    margin-left:3%;
     border: 5px solid white;
-    
+    */
 }
 
 .btn {
@@ -89,4 +95,11 @@ hr {
     font-family: 'Cookie', cursive;
     font-size:140px;
     color:yellow;
+}
+
+.fixed-bottom {
+    padding-bottom: 10%;
+}
+h2 {
+    color:pink;
 }
