--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -105,13 +105,8 @@ margin-bottom:5%;
   margin-left: 17%;
 }
 
-#project1 {
-    
-}
-
-#train_scheduler {
-
-}
-#giphy {
-   
+#email {
+    padding-top: 40%;
+    padding-left: 20%;
+    width:88%;
 }
