--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -15,6 +15,7 @@ body {
 
 #name {
     font-size: 60px;
+    margin-left:2%;
     margin-top: 1%;
     color:rgb(243, 208, 52);
     float:left;
@@ -80,13 +81,7 @@ hr {
     margin-bottom:7%; /* this makes it go above */
    margin-left:3%; /* this is easy */
      border: 5px solid white; adds white
-    /*
-    width: 16%;
-    height: 16%;
-margin-bottom:5%;
-   margin-left:3%;
-    border: 5px solid white;
-    */
+ 
 }
 
 .btn {
@@ -109,4 +104,13 @@ margin-bottom:5%;
     padding-top: 40%;
     padding-left: 20%;
     width:88%;
+}
+
+#text_intro {
+    padding-top: 34%;
+    padding-left: 20%;
+
+}
+li {
+    margin-left:5%;
 }
