--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -16,20 +16,16 @@ body {
 #name {
     font-size: 60px;
     margin-left:2%;
-    margin-top: 1%;
+    /* margin-top: 1%; */
     color:rgb(243, 208, 52);
     float:left;
     
 }
 #position_title {
     float:left;
-    margin-top: 4%;
-}
-
-#position_title {
+    margin-top: 3%;
     color:rgb(220, 244, 252);
 }
-
 #bio_circle {
     /* background-image:url("assets/images/crumpled_paper.png");  */
     margin-left: 25%;
@@ -52,8 +48,6 @@ body {
         height: 250px; /* Set the fixed height of the footer here */
         line-height: 60px; /* Vertically center the text there */
 
-        
-        
 }
 
  #top_line {
@@ -65,6 +59,8 @@ body {
    padding-bottom:10%;   
 }
 .text_modif{
+    margin-right: 3%;
+    margin-left:5%;
     color: rgb(248, 245, 245);
 }
 
@@ -111,6 +107,8 @@ hr {
     padding-left: 20%;
 
 }
-li {
-    margin-left:5%;
+
+#skill_list {
+    margin-left: 105%;
+    margin-top: -33%;
 }
