--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -12,16 +12,19 @@ body {
 }
 
 #name {
-    font-size: 60px;
-    margin-left:2%;
+    font-size: 35px;
+    margin-left:1%;
     color:rgb(243, 208, 52);
     float:left;
     
 }
+#navbarNav {
+    padding-left: 45%;
+}
 #position_title {
     float:left;
-    margin-top: 3%;
-    color:rgb(220, 244, 252);
+    margin-top: .9%;
+    color:rgb(187, 160, 5);
 }
 #bio_circle {
     margin-left: 25%;
@@ -37,12 +40,11 @@ body {
         position: absolute;
         bottom: 0;
         width: 100%;
-        height: 70px; /* Set the fixed height of the footer here */
+        height: 90px; /* Set the fixed height of the footer here */
         line-height: 60px; /* Vertically center the text there */
 
 }
-
- #top_line {
+#top_line {
     height: .1%;
    
 }
@@ -56,15 +58,6 @@ body {
     margin-left:5%;
     color: rgb(248, 245, 245);
 }
-
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0; 
-}
 #photo {
     width: 12%; /* this scales the image down */
     margin-bottom:7%; /* this makes it go above */
@@ -72,15 +65,6 @@ hr {
      border: 5px solid white; 
  
 }
-
-/* .btn {
-    padding-top:37%;
-    margin-left:11%;
-    font-family: 'Cookie', cursive;
-    font-size:45px;
-    color:white;
-} */
-
 .fixed-bottom {
     padding-bottom: 10%;
 }
@@ -88,13 +72,11 @@ hr {
    margin-top: 44%;
   margin-left: 17%;
 }
-
 #email {
     padding-top: 40%;
     padding-left: 20%;
     width:88%;
 }
-
 #text_intro {
     padding-top: 34%;
     padding-left: 20%;
@@ -103,7 +85,6 @@ hr {
 li {
     margin-left:8%;
 }
-
 #skill_list {
     margin-left: 105%;
     margin-top: -20.5%;
@@ -112,19 +93,6 @@ li {
     color: rgb(39, 152, 194);
     line-height: 45%;
 }
-/* #marvel {
-    padding-top: 1%;
-    margin-bottom: 60%;
-    background: red;
-    border: 1px solid white;
-} */
-/* #ts {
-    padding-top: 1%;
-    margin-bottom: 60%;
-    margin-left: .5%;
-    background: yellow;
-    border: 1px solid white;
-} */
 #giphy {
     
 }
@@ -140,3 +108,100 @@ li {
 #e_mail {
     padding-top: 1%;
 }
+#marvel_proj{
+    margin-left: 20%;
+    margin-top: 10%;
+}
+#ts_proj {
+    float: right;
+    margin-top: -12.4%;
+    margin-right: 36%;
+}
+#giphy_proj {
+    clear:both;
+    float:right;
+    margin-top: -14.2%;
+    margin-right: 13.2%;
+}
+#bio_holder {
+    border: .5px solid rgb(223, 220, 220);
+    width:75%;
+    height: 320px;
+    margin-left:15%;
+    margin-top:4%;
+    margin-bottom:-5%;
+}
+#lang_list {
+    font-size: 70%;
+    float: right;
+    margin-top: -15.5%;
+}
+#about_me {
+    font-size: 98%;
+    margin-top: 10%;
+}
+#para2 {
+    font-size: 98%;
+}
+#github {
+    margin-left: 72%;
+    margin-top: 3%;
+}
+#linkedin {
+    margin-top: 3%;
+    margin-right: 1%;
+}
+.port_card {
+    margin-top: -24%;
+}
+.contact-form {
+    margin-top: -9%;
+    margin-left: 39%;
+}
+#send_email {
+    margin-left:31%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0; 
+} */
+
+/* .btn {
+    padding-top:37%;
+    margin-left:11%;
+    font-family: 'Cookie', cursive;
+    font-size:45px;
+    color:white;
+} */
+
+/* #marvel {
+    padding-top: 1%;
+    margin-bottom: 60%;
+    background: red;
+    border: 1px solid white;
+} */
+/* #ts {
+    padding-top: 1%;
+    margin-bottom: 60%;
+    margin-left: .5%;
+    background: yellow;
+    border: 1px solid white;
+} */
