--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -93,12 +93,6 @@ li {
     color: rgb(39, 152, 194);
     line-height: 45%;
 }
-#giphy {
-    
-}
-.links {
-
-}
 .back {
     margin-left: 70%;
     font-family: 'Cookie', cursive;
@@ -109,25 +103,39 @@ li {
     padding-top: 1%;
 }
 #marvel_proj{
-    margin-left: 20%;
-    margin-top: 10%;
+    width: 13rem;
+    margin-top: 8%;
+    font-size: 60%;
+    margin-left: 35%;
+    border: 1px solid rgb(243, 208, 52);
+   
 }
 #ts_proj {
     float: right;
-    margin-top: -12.4%;
-    margin-right: 36%;
+    width: 15%;
+    font-size: 60%;
+    margin-top: -16.1%;
+    margin-right: 43%;
+    padding-bottom: 1.3%;
+    border: 1px solid rgb(243, 208, 52);
 }
 #giphy_proj {
     clear:both;
     float:right;
-    margin-top: -14.2%;
-    margin-right: 13.2%;
+    width: 15%;
+    font-size: 60%;
+    margin-top: -16.1%;
+    margin-right: 31.5%;
+    padding-bottom: 1%;
+    border: 1px solid rgb(243, 208, 52);
 }
 #bio_holder {
+    background-color:rgb(115, 186, 212);
+    box-shadow: 5px 10px 28px rgb(35, 90, 109);
     border: .5px solid rgb(223, 220, 220);
     width:75%;
     height: 320px;
-    margin-left:15%;
+    margin-left:12%;
     margin-top:4%;
     margin-bottom:-5%;
 }
@@ -153,14 +161,30 @@ li {
 }
 .port_card {
     margin-top: -24%;
+    
 }
 .contact-form {
     margin-top: -9%;
-    margin-left: 39%;
+    margin-left: 35%;
 }
 #send_email {
     margin-left:31%;
 }
+.btn {
+    width: 2rem; 
+    height:1rem; 
+    font-size:5%;
+}
+#marv_button {
+    padding-top: 2%;
+}
+#ts_button {
+    padding-top: 10%;
+}
+#gif_button {
+    
+}
+
 
 
 
